# tlmtc

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  implementation_task.yml
.github/workflows/: ci.yml  lint.yml  pr-labeler.yml  release.yml  tests.yml
examples/: paired_example.csv  paired_example_unlabeled.csv
src/tlmtc/: __init__.py  __main__.py  api.py  cli.py  config.py  data_contracts.py  data_pipeline.py  data_prep.py  data_preparation.py  distributed.py  evaluation.py  evaluation_pipeline.py  finetune.py  finetune_pipeline.py  hpo.py  huggingface_compat.py  meta.py  onnx_backend.py  paths.py  prediction.py  reporting.py  run.py  runtime_output.py  settings.py  training.py  types.py  utils.py
src/tlmtc/api/: __init__.py  predict.py  train.py
tests/: test_api.py  test_basic.py  test_cli.py  test_data_contracts.py  test_data_pipeline.py  test_data_prep.py  test_data_prep_utils.py  test_data_preparation.py  test_evaluation.py  test_evaluation_pipeline.py  test_evaluation_utils.py  test_finetune_pipeline.py  test_finetune_utils.py  test_hpo.py  test_paths.py  test_public_api.py  test_reporting.py  test_run.py  test_settings.py  test_training.py
tests/data/tiny_tokenizer/: config.json  vocab.txt
tests/integration/: test_onnx_export.py  test_onnx_prediction.py  test_predict_tlmtc.py  test_train_tlmtc.py
tests/unit/: test_api.py  test_cli.py  test_data_contracts.py  test_data_pipeline.py  test_data_preparation.py  test_distributed.py  test_evaluation.py  test_evaluation_pipeline.py  test_finetune_pipeline.py  test_hpo.py  test_huggingface_compat.py  test_meta.py  test_onnx_backend.py  test_paths.py  test_prediction.py  test_public_api.py  test_reporting.py  test_runtime_output.py  test_settings.py  test_training.py
