[project]
name = "tlmtc"
version = "0.0.1"
description = "Transfer Learning for Multi-Label Text Classification"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
  { name = "Sascha Göbel", email = "goebel@hertie-school.org" },
]
requires-python = ">=3.12"
dependencies = [
    "datasets >= 4.4",
    "iterative-stratification >= 0.1",
    "numpy >= 2.3,<3.0",
    "optuna >= 4.6",
    "pandas >= 2.2,<3.0",
    "pandera[pandas] >= 0.31",
    "pyarrow>=23.0.1",
    "pyyaml >=6",
    "pydantic >=2,<3",
    "scikit-learn >= 1.7",
    "transformers >= 4.57"
]

[project.optional-dependencies]
torch = ["torch >= 2.9"]
peft = ["peft >= 0.18"]

[dependency-groups]
test = ["pytest>=9.0"]
lint = ["ruff>=0.14"]
type = ["mypy>=1.19", "types-pyyaml"]

[project.scripts]
tlmtc = "tlmtc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103"]

[tool.mypy]
python_version = "3.12"
files = ["src/tlmtc"]
strict = true
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
untyped_calls_exclude = [
    "transformers",
]

[[tool.mypy.overrides]]
module = ["tlmtc.finetune_pipeline"]
disable_error_code = ["unused-ignore"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
