[project]
name = "tlmtc"
version = "0.0.1"
description = "Transfer Learning for Multi-Label Text Classification"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
  { name = "Sascha Göbel", email = "goebel@hertie-school.org" },
]
requires-python = ">=3.12"
dependencies = [
    "datasets >=4.4,<5.0",
    "iterative-stratification >=0.1,<1.0",
    "numpy >=2.3,<3.0",
    "optuna >=4.6,<5.0",
    "pandas>=2.2,<4.0",
    "pandera[pandas] >=0.31,<1.0",
    "pyarrow>=22.0,<24.0",
    "pyyaml >=6.0,<7.0",
    "pydantic >=2.0,<3.0",
    "scikit-learn >=1.7,<2.0",
    "transformers >=4.57,<6.0",
    "typer>=0.12,<1",
    "great-tables>=0.20,<1.0",
    "matplotlib>=3.10,<4",
    "seaborn>=0.13,<1.0",
]

[project.optional-dependencies]
training = [
    "torch >= 2.9,<3.0",
    "peft >= 0.18,<1.0"
]

[dependency-groups]
test = ["pytest>=9.0,<10.0"]
lint = ["ruff>=0.14,<1.0"]
type = ["mypy>=1.19,<2.0", "types-pyyaml"]

[project.scripts]
tlmtc = "tlmtc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103"]

[tool.mypy]
python_version = "3.12"
files = ["src/tlmtc"]
strict = true
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
untyped_calls_exclude = [
    "transformers",
]

[[tool.mypy.overrides]]
module = ["tlmtc.finetune_pipeline"]
disable_error_code = ["unused-ignore"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that run the real tlmtc training pipeline end to end",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
